Change response for user registration
