# docs/swagger.json
@@ -72,8 +72,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "User created successfully, returns jwt token",
                         "schema": {
                             "$ref": "#/definitions/controllers.registerUserResponse"
                         }
@@ -123,330 +123,8 @@
         "controllers.registerUserResponse": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "token": {
                     "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "ingredients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Ingredient"
-                    }
-                },
-                "recipes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Recipe"
-                    }
-                },
-                "role": {
-                    "$ref": "#/definitions/models.Role"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Tag"
-                    }
-                },
-                "units": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Unit"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Ingredient": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "$ref": "#/definitions/models.IngredientsCategory"
-                },
-                "category_id": {
-                    "type": "integer"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "icon": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_system_ingredient": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "recipe_ingredients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RecipeIngredient"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.IngredientsCategory": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Recipe": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "link": {
-                    "type": "string"
-                },
-                "recipe_ingredients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RecipeIngredient"
-                    }
-                },
-                "recipe_tags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RecipeTag"
-                    }
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.RecipeIngredient": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "ingredient": {
-                    "$ref": "#/definitions/models.Ingredient"
-                },
-                "ingredient_id": {
-                    "type": "integer"
-                },
-                "quantity": {
-                    "type": "number"
-                },
-                "recipe_id": {
-                    "type": "integer"
-                },
-                "unit": {
-                    "$ref": "#/definitions/models.Unit"
-                },
-                "unit_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.RecipeTag": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "recipe": {
-                    "$ref": "#/definitions/models.Recipe"
-                },
-                "recipe_id": {
-                    "type": "integer"
-                },
-                "tag": {
-                    "$ref": "#/definitions/models.Tag"
-                },
-                "tag_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Role": {
-            "type": "string",
-            "enum": [
-                "admin",
-                "user"
-            ],
-            "x-enum-varnames": [
-                "ADMIN",
-                "USER"
-            ]
-        },
-        "models.System": {
-            "type": "string",
-            "enum": [
-                "METRIC",
-                "FARENHEIT"
-            ],
-            "x-enum-varnames": [
-                "METRIC",
-                "FARENHEIT"
-            ]
-        },
-        "models.Tag": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_system_tag": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "recipeTags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RecipeTag"
-                    }
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.Type": {
-            "type": "string",
-            "enum": [
-                "WEIGHT",
-                "VOLUME",
-                "TEMPERATURE"
-            ],
-            "x-enum-varnames": [
-                "WEIGHT",
-                "VOLUME",
-                "TEMPERATURE"
-            ]
-        },
-        "models.Unit": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_system_unit": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "recipeIngredients": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.RecipeIngredient"
-                    }
-                },
-                "symbol": {
-                    "type": "string"
-                },
-                "system": {
-                    "$ref": "#/definitions/models.System"
-                },
-                "type": {
-                    "$ref": "#/definitions/models.Type"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         }
